# avionics

./: .gitignore  README.md  sim+speaker.txt  sim_only.csv
.github/workflows/: python-package.yml  tests.yml
CAD/: Pnut.SLDPRT
astra/: MPL3115A2.mpy  MPL3115A2.py  MPU6050.mpy  MPU6050.py  README.md  astra.mpy  astra.py  boot.py  code.py  compile.bat  copy.mpy  datacap.py  deserialisation.py  get.bat  get_fast.bat  log.csv  micropython.py  mpy_implementation.py  out.csv  push.bat  push_fast.bat  rb_test.py  ring_buffer.mpy  ring_buffer.py  safe.py  serialisation.mpy  serialisation.py  storage_test.ino  types.mpy
astra mk2/: ASTRA Mk2.crv  ASTRA Mk2.dxf  wiring.txt
astra/data/: log.csv  log_apr11.csv
astra/music/: to_freq.py
astra/sensor_test/: sensor_test.ino
astra/src/: MPL3115A2.mpy  MPL3115A2.py  buzzer.mpy  buzzer.py  datacap.py  external.mpy  external.py  main.mpy  main.py  ring_buffer.py  sensors.mpy  sensors.py  serialisation.mpy  serialisation.py  state_machine.mpy  state_machine.py
astra/tests/: test_ring_buffer.py  test_states.py  test_storage.py
astra/tools/: compile.bat  data_read.py  get_fast.bat  push.bat  test.sh  (+1 more)
buzzer/: buzzer.ino  siren.ino
camera/: opencv_frame.py
data_processing/: OR_astra_jun13.csv  OpenRocket.mat  astra.csv  astra.m  astra_apr11.pf2  astra_jun13.csv  astra_jun13.pf2  flashed_apr11.py  pnut retrieval.txt  pnut_apr11.csv
experimental/: CMakeLists.txt  flash.sh  main.cpp
gps/: wiring.txt
gps_esp32/: gps_esp32.ino
gps_sd/: gps_sd.ino
vacuum_chamber/: get_details.bat  run.bat  vacuum_chamber.ino  wiring.txt
(+54 files in other folders)
